Preserve recent history ordering in settings